--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slidescape Saga</title>
-    <link href="https://www.dafont.com/void-2058.font" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
     <style>
         body {
             display: flex;
@@ -35,7 +35,7 @@
         }
 
         .logo {
-            font-family: 'Rubik Iso', cursive;
+            font-family: 'Rubik', sans-serif;
             font-size: 72px;
             font-weight: bold;
             margin-bottom: 20px;
@@ -44,7 +44,7 @@
         }
 
         .start {
-            font-family: 'Rubik Iso', cursive;
+            font-family: 'Rubik', sans-serif;
     font-size: 32px;
     font-weight: bold;
     cursor: pointer;
@@ -56,7 +56,7 @@
         }
 
         .load {
-            font-family: 'Rubik Iso', cursive;
+            font-family: 'Rubik', sans-serif;
     font-size: 32px;
     font-weight: bold;
     cursor: pointer;
