--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
      <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <title>Slidescape Saga</title>
     <style>
         body {
@@ -25,7 +26,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            font-family: 'Rubik Iso', cursive;
+            font-family: 'Rubik', sans-serif;
             font-size: 96px;
             font-weight: bold;
             margin-bottom: 20px;
@@ -34,7 +35,7 @@
         }
 
         .logo {
-            font-family: 'Rubik Iso', cursive;
+            font-family: 'Rubik', sans-serif;
             font-size: 72px;
             font-weight: bold;
             margin-bottom: 20px;
@@ -43,7 +44,7 @@
         }
 
         .start {
-            font-family: 'Rubik Iso', cursive;
+            font-family: 'Rubik', sans-serif;
     font-size: 32px;
     font-weight: bold;
     cursor: pointer;
@@ -55,7 +56,7 @@
         }
 
    .load {
-            font-family: 'Rubik', sans-serif;
+             font-family: 'Rubik', sans-serif;
     font-size: 32px;
     font-weight: bold;
     cursor: pointer;
@@ -66,12 +67,13 @@
     text-shadow: 1px 1px 2px #000;
     margin-top: 10px;
         }
-        .piece {
-            width: 200px;
-            height: 200px;
-            background-size: 600px 600px;
-            cursor: pointer;
-        }
+       .piece {
+    width: 200px;
+    height: 200px;
+    background-size: cover;
+    cursor: pointer;
+}
+
 
         .grid {
             display: grid;
@@ -133,6 +135,7 @@
             .piece {
                 width: 100px;
                 height: 100px;
+		background-size: cover;
             }
           
             .grid {
